--- a/My Quiz/highscores.html
+++ b/My Quiz/highscores.html
@@ -18,10 +18,10 @@
             <div id="highscores" class="flex-center flex-column">
                 <h1 id="finalScore">Leaderboard</h1>
                 <ul id="highScoresList"></ul>
-                <a href="http://127.0.0.1:5500/My%20Quiz/index.html" class="btn">Home<i class="fas fa-home"></i></a>
+                <a href="./index.html" class="btn">Home<i class="fas fa-home"></i></a>
             </div>
         </div>
+
         <script src="highscores.js"></script>
     </body>
-
 </html>
