--- a/My Quiz/end.html
+++ b/My Quiz/end.html
@@ -21,8 +21,8 @@
                     <input type="text" name="name" id="username" placeholder="Enter your name">
                     <button class="btn" id="saveScoreBtn" type="submit" onclick="saveHighScore(event)" disabled>Save</button>
                 </form>
-                <a href="http://127.0.0.1:5500/My%20Quiz/game.html" class="btn">Play Again</a>
-                <a href="http://127.0.0.1:5500/My%20Quiz/index.html" class="btn">Home<i class="fas fa-home"></i></a>
+                <a href="./game.html" class="btn">Play Again</a>
+                <a href="./index.html" class="btn">Home<i class="fas fa-home"></i></a>
             </div>
         </div>
         <script src="end.js"></script>
