--- a/My Quiz/index.html
+++ b/My Quiz/index.html
@@ -11,20 +11,21 @@
 
         <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
-
     </head>
 
     <body>
+        <main>
+            <section class="container">
+                <div id="home" class="flex-column flex-center">
+                    <h1>Trivia Quiz Game</h1>
+                    <a href="./game.html" class="btn">Play</a>
+                    <a href="./highscores.html" id="highscore-btn" class="btn">High Scores<i class="fas fa-trophy"></i></a>
+                    <button type="button" onclick="window.location.href='../index.html'" class="btn">Back to Portfolio</button>
+                </div>
+            </section>
+        </main>
 
-        <div class="container">
-            <div id="home" class="flex-column flex-center">
-                <h1>Trivia Quiz Game</h1>
-                <a href="http://127.0.0.1:5500/My%20Quiz/game.html" class="btn">Play</a>
-                <a href="http://127.0.0.1:5500/My%20Quiz/highscores.html" id="highscore-btn" class="btn">High Scores<i class="fas fa-trophy"></i></a>
-            </div>
-        </div>
-
+        <!--Javascript Link-->
         <script src="script.js"></script>
-    </body>
-    
+    </body>    
 </html>
